--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -17,7 +16,7 @@
             <h1> <img src="logo.png"> </h1>
             <nav>
                 <ul>
-                    <li> <a href="index.html">Home</a></li>
+                    <li> <a href="index.htmlo">Home</a></li>
                     <li> <a href="produtos.html">Produtos</a></li>
                     <li> <a href="contato.html">Contato</a></li>
                 </ul>
